<!--
  ~ Crypto Transfer is a file transfer application that uses encryption.
  ~ Copyright (c) 2020  Juliana Tacacima, Luciana Callefe Donadio,
  ~ Marcos Vinícius Lourenço Teixeira, Melissa Yuri Campos Imai.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">Crypto Transfer</string>
    <string name="select_file">Selecionar arquivo</string>
    <string name="send">Enviar</string>
    <string name="insert_receiver">Digite o ID de outro usuário</string>
    <string name="sender_id">Seu ID:</string>
    <string name="confirm_pin">Confirme o pin inserido</string>
    <string name="create_pin">Digite um PIN de seis dígitos</string>
    <string name="wrong_pin">PIN incorreto, tente novamente!</string>
    <string name="search">Buscar</string>
    <string name="history">Histórico</string>
    <string name="contacts">Contatos</string>
    <string name="new_contact">Novo Contato</string>
    <string name="edit">Editar</string>
    <string name="remove">Remover</string>
    <string name="delete">Deletar</string>
    <string name="update_contact">Editar Contato</string>
    <string name="id_already_exists">ID já existe nos contatos.</string>
    <string name="contact_saved">Contato salvo.</string>
    <string name="type_user_id">Digite o id do usuário</string>
    <string name="type_user_name">Digite o nome do usuário</string>
    <string name="text_to_clipboard">Text copied to clipboard</string>
    <string name="no_changes">Nenhuma mudança verificada.</string>
</resources>