<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Crypto Transfer is a file transfer application that uses encryption.
  ~ Copyright (c) 2020  Juliana Tacacima, Luciana Callefe Donadio,
  ~ Marcos Vinícius Lourenço Teixeira, Melissa Yuri Campos Imai.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/contactFragment"
            android:enabled="true"
            android:icon="@drawable/ic_account_box"
            android:title="@string/contacts"/>
        <item
            android:id="@+id/sendFragment"
            android:enabled="true"
            android:icon="@drawable/ic_add_circle_outline"
            android:title="@string/send"/>
        <item
            android:id="@+id/historyFragment"
            android:enabled="true"
            android:icon="@drawable/ic_history"
            android:title="@string/history"/>
    </group>
</menu>