<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Crypto Transfer is a file transfer application that uses encryption.
  ~ Copyright (c) 2020  Juliana Tacacima, Luciana Callefe Donadio,
  ~ Marcos Vinícius Lourenço Teixeira, Melissa Yuri Campos Imai.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="2dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="9"
                android:paddingHorizontal="10dp">

                <TextView
                    android:id="@+id/contactName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <TextView
                    android:id="@+id/contactId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="viewEnd"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            </LinearLayout>
            <ImageButton
                android:id="@+id/btnItemContactMenu"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:textAlignment="center"
                android:src="@drawable/ic_more_vert" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
    
    <LinearLayout
        android:id="@+id/ll_container_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="2dp"
        android:paddingVertical="5dp"
        android:visibility="gone"
        android:background="@color/colorPrimaryDark">

        <LinearLayout
            android:id="@+id/ll_item_send"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_send"
                app:tint="@color/white" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/send" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_item_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_edit_outlined"
                app:tint="@color/white" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/edit" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_item_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_delete_forever"
                app:tint="@color/white" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/remove" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>